--- a/client/src/components/ad.css
+++ b/client/src/components/ad.css
@@ -32,3 +32,10 @@
   height: 100%;
   vertical-align: middle;
 }
+
+.test {
+  max-height : 200px;
+  object-fit: cover;
+  object-position : center;
+
+}
