--- a/client/src/components/ad.css
+++ b/client/src/components/ad.css
@@ -21,8 +21,8 @@
 
 .img-test{
   max-width : 100%;
-  max-height: 100%;
-  object-fit: scale-down;
+  height: 100%;
+  object-fit: contain;
   margin:auto;
 
 }
