--- a/client/src/views/home.css
+++ b/client/src/views/home.css
@@ -3,3 +3,13 @@
     padding-top:3rem;
     padding-bottom:3rem;
 }
+
+.bg-primary{
+    background-color: bisque;
+    color:bisque;
+}
+
+h1 p{
+    color:rgb(104, 50, 0);
+    
+}
