--- a/client/src/views/home.css
+++ b/client/src/views/home.css
@@ -9,6 +9,12 @@ section{
     background:#f7f5f4;
 }
 
-h1 p{
-    color:rgb(121, 58, 0);
+h1 {
+    font-family: roboto-bold;
+    color:cornflowerblue
+}
+
+p{
+    font-family: roboto;
+    color:plum;
 }
