--- a/client/src/views/home.css
+++ b/client/src/views/home.css
@@ -1,6 +1,6 @@
 .img-fluid{
     width: 20%;
-    padding-top:3rem;
+    padding-top:2rem;
     padding-bottom:3rem;
 }
 
@@ -12,9 +12,16 @@ section{
 h1 {
     font-family: roboto-bold;
     color:rgb(100, 57, 0);
+    font-size:30px;
 }
 
 p{
     font-family: roboto;
     color:black;
+    font-size: 15px;
 }
+
+.foundus {
+    padding-top: 5rem;
+    padding-bottom: 4rem;
+  }
