--- a/client/src/components/banner.css
+++ b/client/src/components/banner.css
@@ -3,5 +3,10 @@
 }
 
 .navbar{
-  background-color: brown;
+  background-color: rgb(100, 57, 0);
+  color:white;
+}
+
+.navbar:hover{
+  color:grey;
 }
