--- a/client/src/components/banner.css
+++ b/client/src/components/banner.css
@@ -15,6 +15,7 @@
   color:#e0860b;
   border:#e0860b solid 1px;
   background-color:transparent;
+  text-decoration:none;
 }
 
 #searchbutton:hover{
@@ -23,3 +24,6 @@
   background-color: #facf57;
 }
 
+.fa{
+  padding:2%;
+}
