--- a/client/src/components/banner.css
+++ b/client/src/components/banner.css
@@ -26,12 +26,11 @@
 
 #searchbutton:active{
   text-decoration:none;
+  border:none;
 }
 
 #searchbutton:focus{
   text-decoration:none;
+  border:none;
 }
 
-.fa{
-  margin:2%;
-}
