--- a/client/src/components/ad.css
+++ b/client/src/components/ad.css
@@ -39,3 +39,11 @@
   object-position : center;
 
 }
+
+.card{
+  box-shadow:0 0px 8px 0 rgba(0, 0, 0, 0.1), 0 0px 20px 0 rgba(0, 0, 0, 0.1);
+}
+
+.card-img-top{
+  box-shadow:0 0px 0px 0 rgba(0, 0, 0, 0.1), 0 0px 3px 0 rgba(0, 0, 0, 0.1)
+}
