--- a/client/src/components/banner.css
+++ b/client/src/components/banner.css
@@ -43,8 +43,8 @@
   right: 0;
   bottom: 0;
   width: 300px;
-  height: 100px;
-  .search {
+  height: 100px;}
+.container  .search {
     position: absolute;
     margin: auto;
     top: 0;
@@ -58,11 +58,11 @@
     transition: all 1s;
     z-index: 4;
     box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.4);
-    // box-shadow: 0 0 25px 0 crimson;
-    &:hover {
+  box-shadow: 0 0 25px 0 crimson;}
+    .container .search:hover {
       cursor: pointer;
     }
-    &::before {
+    .container .search::before {
       content: "";
       position: absolute;
       margin: auto;
@@ -76,7 +76,7 @@
       transform: rotate(45deg);
       transition: all .5s;
     }
-    &::after {
+    .container .search::after {
       content: "";
       position: absolute;
       margin: auto;
@@ -90,8 +90,8 @@
       border: 2px solid white;
       transition: all .5s;
     }
-  }
-  input {
+
+ input {
     font-family: 'Inconsolata', monospace;
     position: absolute;
     margin: auto;
@@ -110,30 +110,29 @@
     border-radius: 30px;
     box-shadow: 0 0 25px 0 crimson,
                 0 20px 25px 0 rgba(0, 0, 0, 0.2);
-
     transition: all 1s;
     opacity: 0;
     z-index: 5;
     font-weight: bolder;
-    letter-spacing: 0.1em;
-    &:hover {
+   letter-spacing: 0.1em;}
+ input:hover {
       cursor: pointer;
     }
-    &:focus {
+    input:focus {
       width: 300px;
       opacity: 1;
       cursor: text;
     }
-    &:focus ~ .search {
+    input:focus ~ .search {
       right: -250px;
       background: #151515;
-      z-index: 6;
-      &::before {
+      z-index: 6;}
+      input:focus ~ .search::before {
         top: 0;
         left: 0;
         width: 25px;
       }
-      &::after {
+      input:focus ~ .search::after {
         top: 0;
         left: 0;
         width: 25px;
@@ -143,11 +142,9 @@
         border-radius: 0%;
         transform: rotate(-45deg);
       }
-    }
-    &::placeholder {
+    input:focus ~ .search::placeholder {
       color: white;
       opacity: 0.5;
       font-weight: bolder;
     }
-  }
-}
+  
