--- a/client/src/components/banner.css
+++ b/client/src/components/banner.css
@@ -53,12 +53,12 @@
     left: 0;
     width: 80px;
     height: 80px;
-    background: crimson;
+    background: #e0860b;
     border-radius: 50%;
     transition: all 1s;
     z-index: 4;
     box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.4);
-  box-shadow: 0 0 25px 0 crimson;}
+  box-shadow: 0 0 25px 0 #e0860b;}
     .container .search:hover {
       cursor: pointer;
     }
@@ -103,13 +103,11 @@
     height: 50px;
     outline: none;
     border: none;
-    background: crimson;
-    color: white;
-    text-shadow: 0 0 10px crimson;
+    background: white;
+    color: rgb(100, 57, 0);
+    text-shadow: 0 0 10px white;
     padding: 0 80px 0 20px;
     border-radius: 30px;
-    box-shadow: 0 0 25px 0 crimson,
-                0 20px 25px 0 rgba(0, 0, 0, 0.2);
     transition: all 1s;
     opacity: 0;
     z-index: 5;
