--- a/client/src/components/banner.css
+++ b/client/src/components/banner.css
@@ -23,3 +23,57 @@
   border:solid 1px transparent !important;
   background-color: #facf57;
 }
+
+/* ne pas essayer de comprendre */
+
+/*** COLORS ***/
+
+
+
+/*** STYLES ***/
+.search {
+	display: inline-block;
+	position: relative;
+	height: 35px;
+	width: 35px;
+	box-sizing: border-box;
+	margin: 0px 8px 7px 0px;
+	padding: 7px 9px 0px 9px;
+	border: 3px solid #facf57;
+	border-radius: 25px;
+	transition: all 200ms ease;
+	cursor: text;}
+	
+	.search:after {
+		content: "";
+		position: absolute;
+		width: 3px;
+		height: 20px;
+		right: -5px;
+		top: 21px;
+		background: #facf57;
+		border-radius: 3px;
+		transform: rotate(-45deg);
+		transition: all 200ms ease;
+	}
+	
+	.search.active,
+	.search:hover {
+		width: 200px;
+		margin-right: 0px;}
+		
+		.search:hover:after {
+			height: 0px;	
+		}
+
+	
+	.search input {
+		width: 100%;
+		border: none;
+		box-sizing: border-box;
+		font-family: Helvetica;
+		font-size: 15px;
+		color: inherit;
+		background: transparent;
+		outline-width: 0px;
+	}
