--- a/client/src/components/banner.css
+++ b/client/src/components/banner.css
@@ -41,7 +41,7 @@
 	padding: 7px 9px 0px 9px;
 	border: 3px solid #facf57;
 	border-radius: 25px;
-	transition: all 200ms ease;
+  transition: all 200ms ease;
 	cursor: text;}
 	
 	.search:after {
@@ -73,7 +73,7 @@
 		box-sizing: border-box;
 		font-family: Helvetica;
 		font-size: 15px;
-		color: inherit;
+		color: white;
 		background: transparent;
 		outline-width: 0px;
 	}
