--- a/client/src/components/banner.css
+++ b/client/src/components/banner.css
@@ -37,12 +37,12 @@
 	height: 35px;
 	width: 35px;
 	box-sizing: border-box;
-	margin: 0px 8px 7px 0px;
-	padding: 7px 9px 0px 9px;
 	border: 3px solid #facf57;
 	border-radius: 25px;
   transition: all 200ms ease;
-	cursor: text;}
+  cursor: text;
+  padding-left:10px;
+}
 	
 	.search:after {
 		content: "";
@@ -73,7 +73,8 @@
 		box-sizing: border-box;
 		font-family: Helvetica;
 		font-size: 15px;
-		color: white;
+    color: white;
+    opacity:0.7;
 		background: transparent;
 		outline-width: 0px;
 	}
