--- a/client/src/components/ad.css
+++ b/client/src/components/ad.css
@@ -61,3 +61,9 @@
   font-family:roboto-light;
   font-size:18px;
 }
+
+.card:hover{
+  width:20rem;
+  box-shadow:0 0px 8px 0 rgba(88, 53, 4, 0.5), 0 0px 20px 0 rgba(88, 53, 4, 0.1);
+
+}
