--- a/client/src/components/ad.css
+++ b/client/src/components/ad.css
@@ -77,3 +77,13 @@
 .col-sm-6{
   color:#e0860b;
 }
+
+button{
+  padding: 5px;
+}
+button:hover{
+  background-color:#bd0f2d;
+}
+button:hover .grey-img{
+  filter:grayscale(1);
+}
