--- a/client/src/components/ad.css
+++ b/client/src/components/ad.css
@@ -74,11 +74,22 @@
   padding-left:20%;
 }
 
+@mobile{
+  .container-cancer{
+    padding-right:5%;
+    padding-left:5%;
+  }
+}
 .col-sm-6{
   color:#e0860b;
 }
 
 button{
+  padding: 5px;
+}
+
+.grey-img{
+  width: 20%;
   padding: 5px;
 }
 button:hover{
