--- a/client/src/components/ad.css
+++ b/client/src/components/ad.css
@@ -74,7 +74,7 @@
   padding-left:20%;
 }
 
-@mobile{
+@media screen and (max-width: 767px){
   .container-cancer{
     padding-right:5%;
     padding-left:5%;
