--- a/client/src/components/ad.css
+++ b/client/src/components/ad.css
@@ -76,8 +76,8 @@
 
 @media screen and (max-width: 767px){
   .container-cancer{
-    padding-right:5%;
-    padding-left:5%;
+    padding-right:0%;
+    padding-left:0%;
   }
 }
 .col-sm-6{
@@ -86,16 +86,22 @@
 
 button{
   padding: 5px;
+  background-color: #fad05a;
+  border-radius: 50px;
 }
 
 .grey-img{
   width: 20%;
   padding: 5px;
+  background-color:white;
 }
 
-button:hover .grey-img{
+/* button:hover .grey-img{
   filter:white;
-}
+} */
+
 button:hover{
   background-color:#bd0f2d !important;
+  border-color: #bd0f2d !important;
+  opacity:0.8;
 }
