--- a/client/src/components/ad.css
+++ b/client/src/components/ad.css
@@ -74,12 +74,6 @@
   padding-left:20%;
 }
 
-@media screen and (max-width: 767px) {
-  .container-cancer{
-    padding-right:0%;
-    padding-left:0%;
-  }
-}
 
 .col-sm-6{
   color:#e0860b;
@@ -89,9 +83,10 @@ button{
   padding: 5px;
 }
 .btn-secondary{
-  background-color: #fad05a !important;
-  border-color: #fad05a !important;
+  background-color: #ecc455 !important;
+  border-color: #ecc455 !important;
   border-radius: 50px;
+  opacity:0.8;
 }
 
 .grey-img{
@@ -109,4 +104,14 @@ button:hover{
   background-color:#bd0f2d !important;
   border-color: #bd0f2d !important;
   opacity:0.8;
+}
+
+@media screen and (max-width: 767px) {
+  .container-cancer{
+    padding-right:0%;
+    padding-left:0%;
+  }
+  .grey-img{
+    width:30%;
+  }
 }
