--- a/client/src/components/ad.css
+++ b/client/src/components/ad.css
@@ -112,6 +112,10 @@ button:hover{
   opacity:0.8;
 }
 
+.col-lg-8{
+  margin:auto;
+}
+
 @media screen and (max-width: 767px) {
   .container-cancer{
     padding-right:0%;
@@ -121,3 +125,4 @@ button:hover{
     width:30%;
   }
 }
+
