--- a/client/src/components/ad.css
+++ b/client/src/components/ad.css
@@ -88,7 +88,8 @@
 button{
   padding: 6px;
 }
-.btn-secondary{
+
+#btn-linkcs{
   background-color: #ecc455 !important;
   border-color: #ecc455 !important;
   border-radius: 50px;
