Change other buttons

--- a/client/src/components/ad.css
+++ b/client/src/components/ad.css
@@ -119,8 +119,10 @@ button{
     padding-right:0%;
     padding-left:0%;
   }
-  .grey-img{
-    width:30%;
+  
+  .btn{
+    width:45%;
+    margin:5%;
   }
 }
 
