Change size of jumbutron on mobile

--- a/client/src/components/ad.css
+++ b/client/src/components/ad.css
@@ -139,5 +139,9 @@ button{
     font-size:2rem;
     margin:auto;
   }
+  .jumbotron{
+    margin-left:1% !important;
+    margin-right:1% !important;
+  }
 }
 
