--- a/client/src/components/ad.css
+++ b/client/src/components/ad.css
@@ -140,8 +140,9 @@ button{
     margin:auto;
   }
   .col-lg-8{
-    margin-left:1% !important;
-    margin-right:1% !important;
+    margin-left:0px !important;
+    margin-right:0px !important;
+    margin:0px !important;
   }
 }
 
