Change size of jumbutron on mobile

--- a/client/src/components/ad.css
+++ b/client/src/components/ad.css
@@ -143,6 +143,7 @@ button{
     margin-left:0px !important;
     margin-right:0px !important;
     margin:0px !important;
+    padding:0px !important;
   }
 }
 
