--- a/client/src/components/ad.css
+++ b/client/src/components/ad.css
@@ -140,12 +140,11 @@ button{
     margin:auto;
   }
   .col-lg-8{
-    margin-left:0px !important;
-    margin-right:0px !important;
+    margin-left:-10% !important;
+    margin-right:-10% !important;
     margin:0px !important;
-    padding:0px !important;
-    padding-left:-2%  !important;
-    padding-right:-2%  !important;
+    padding-left:-10%  !important;
+    padding-right:-10%  !important;
   }
 }
 
