--- a/client/src/components/ad.css
+++ b/client/src/components/ad.css
@@ -139,9 +139,9 @@ button{
     font-size:2rem;
     margin:auto;
   }
-  .col-lg-8{
-    margin-left:-10% !important;
-    text-align: center;
+  .container-fluid{
+    margin:0px !important;
+    padding:0px !important;
   }
 }
 
