--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,3 +30,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+content{
+  font-family:roboto;
+  letter-spacing: 20px;
+}
