--- a/client/src/components/display.css
+++ b/client/src/components/display.css
@@ -1,12 +1,15 @@
 .page-link{
     color:white !important;
     background-color:rgb(100, 57, 0) !important;
+    border-radius:50px;
+    border-color:#e0860b !important;
 }
 
 .page-item{
     color:rgb(100, 57, 0) !important;
     border-radius: 50px;
     padding:5px;
+    border-color:#e0860b !important;
 }
 
 .li{
