--- a/client/src/components/display.css
+++ b/client/src/components/display.css
@@ -9,7 +9,7 @@
     padding:5px;
 }
 
-.page-item.active{
+.page-item.active .page-link{
     color:white !important;
     background-color:rgb(100, 57, 0) !important;
     border-radius:50px;
