--- a/client/src/views/createPost.css
+++ b/client/src/views/createPost.css
@@ -77,7 +77,6 @@ input[type='text'], [type='email'], [type='file'], select, textarea {
   letter-spacing: 1px;
 	margin: 0em 0 1.875em 0;
 	padding: 0 0 0.875em 0;
-  text-transform: uppercase;
 	width: 100%;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -219,6 +218,7 @@ textarea {
   display: inline-block;
   font-family: 'Helvetica', Arial, sans-serif;
   font-size: 0.875em;
+  margin:0%;
   font-weight: bold;
   outline: none;
   padding: 20px 35px;
