--- a/client/src/views/createPost.css
+++ b/client/src/views/createPost.css
@@ -41,7 +41,7 @@ textarea {
 }
 
 #container {
-  border: solid 3px #474544;
+  border: solid 3px rgb(100, 57, 0);
   max-width: 768px;
   margin: 60px auto;
   position: relative;
@@ -53,7 +53,7 @@ form {
 }
 
 h2 {
-  color: #474544;
+  color: rgb(100, 57, 0);
   font-size: 27px;
   font-weight: 700;
   letter-spacing: 7px;
@@ -211,7 +211,7 @@ textarea {
   display: inline-block;
 }
 
-.btn {
+.btn1 {
   background:inherit;
   border: solid 2px #474544;
   color: #474544;
