--- a/client/src/views/createPost.css
+++ b/client/src/views/createPost.css
@@ -3,6 +3,10 @@
   height:auto;
 }
 
+.hover-pointer:hover{
+  cursor : pointer;
+}
+
 
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
