--- a/client/src/views/createPost.css
+++ b/client/src/views/createPost.css
@@ -8,7 +8,12 @@
 }
 
 input[type='file']{
+  opacity: 0;
   cursor: pointer;
+  width: 24px;
+  height: 24px;
+  font-size: 0;
+  position: absolute;
 }
 
 
