--- a/client/src/views/createPost.css
+++ b/client/src/views/createPost.css
@@ -93,6 +93,13 @@ input[type='text'], [type='email'], [type='file'], select, textarea {
   transition: all 0.3s;
 }
 
+input[type='text'], textarea {
+  cursor : text;
+}
+
+select {
+  cursor : pointer;
+}
 
 
 input[type='text']:focus, [type='email']:focus,[type='file']:focus, textarea:focus {
