--- a/client/src/components/display.css
+++ b/client/src/components/display.css
@@ -58,6 +58,8 @@
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -124px;
     }
+}
+
 .page-link{
     color:rgb(100, 57, 0) !important;
     border-radius: 50px;
