--- a/client/src/views/page404.css
+++ b/client/src/views/page404.css
@@ -1,5 +1,6 @@
 body{
     margin: 0;
+    background:#e0860b;
   }
   main{
     width: 100vw;
@@ -7,7 +8,6 @@ body{
     display: table-cell;
     vertical-align: middle;
     text-align: center;
-    background-color: #313e44;
   }
   .chope{
     border: 15px solid rgba(255, 255, 255, 1);
