--- a/client/src/views/page404.css
+++ b/client/src/views/page404.css
@@ -1,7 +1,4 @@
-body{
-    margin: 0;
-    background:rgb(100, 57, 0);
-  }
+
   main{
     width: 100vw;
     height: 70vh;
@@ -91,6 +88,7 @@ body{
 }
   
 .btn-primary1 {
+    color:white;
     background-color: #F9B804;
     border-color: rgb(100, 57, 0);
     border:solid;
