--- a/client/src/views/page404.css
+++ b/client/src/views/page404.css
@@ -63,7 +63,7 @@
     display: inline-block;
   }
   
-  p{
+  #texte_erreur{
     font-size:35px;
     font-family:roboto;
     color:white;
@@ -74,7 +74,26 @@
 
 
 
+  .btn1 {
+    font-weight: 700;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 300px;
+    font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
+    color: #f7f5f4;
+  }
 
+.btn-xl {
+    padding: 1rem 2rem;
+}
+  
+.btn-primary1 {
+    color:white;
+    background-color: #F9B804;
+    border-color: rgb(100, 57, 0);
+    border:solid;
+    border-color:transparent;
+}
 
 
 @media screen and (max-width: 767px) {
