--- a/client/src/views/page404.css
+++ b/client/src/views/page404.css
@@ -66,7 +66,7 @@
   #texte_erreur{
     font-size:35px;
     font-family:roboto;
-    color:white;
+    color:rgb(100, 57, 0);
     font-weight:bold;
     margin-left:-20px;
     letter-spacing:10px;
