--- a/client/src/views/page404.css
+++ b/client/src/views/page404.css
@@ -73,8 +73,7 @@
   }
 
 
-
-  .btn1 {
+.btn1 {
     font-weight: 700;
     text-transform: uppercase;
     border: none;
@@ -109,9 +108,18 @@
     }
     
     .btn-primary1 {
-        background-color: #008ecc;
-        border-color: #f7f5f4;
+        background-color: #F9B804;
+        border-color:rgb(100, 57, 0);
         border:solid;
         border-color:transparent;
     }
   }
+
+#fond{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%; 
+    height: 100%;
+    background: rgb(100, 57, 0) ;
+}
