--- a/client/src/views/page404.css
+++ b/client/src/views/page404.css
@@ -7,7 +7,7 @@
     text-align: center;
   }
   .chope{
-    border: 15px solid rgb(100, 57, 0);
+    border: 15px solid #f7f5f4;
     border-top: none;
     width: 150px;
     height: 180px;
@@ -41,7 +41,7 @@
     height: 10%;
   }
   .mousse > div{
-    background-color: rgb(255,232,174);
+    background-color: rgb(255, 246, 224);
     height: 13px;
     width: 13px;
     border-radius: 50%;
@@ -50,7 +50,7 @@
     opacity: 0;
   }
   .anse{
-    border: 15px solid rgb(100, 57, 0);
+    border: 15px solid #f7f5f4;
     border-left: none;
     width: 50px;
     vertical-align: top;
@@ -66,7 +66,7 @@
   #texte_erreur{
     font-size:35px;
     font-family:roboto;
-    color:rgb(100, 57, 0);
+    color:#f7f5f4;
     font-weight:bold;
     margin-left:-20px;
     letter-spacing:10px;
