--- a/client/src/views/page404.css
+++ b/client/src/views/page404.css
@@ -486,3 +486,14 @@
     height: 100%;
     background: rgb(100, 57, 0) ;
 }
+
+
+#animation{
+    width: 100px;
+    height: 90px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -50px;
+    margin-top: -45px;
+  }
