--- a/client/src/views/page404.css
+++ b/client/src/views/page404.css
@@ -442,7 +442,7 @@
     border: none;
     border-radius: 300px;
     font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
-    color: #f7f5f4;
+    color: rgb(100, 57, 0) !important;
   }
 
 .btn-xl {
@@ -450,7 +450,7 @@
 }
   
 .btn-primary1 {
-    color:white;
+    color:rgb(100, 57, 0) !important;
     background-color: #F9B804;
     border-color: rgb(100, 57, 0);
     border:solid;
@@ -461,7 +461,7 @@
 .btn-primary1:active,   
 .btn-primary1:focus,   
 .btn-primary1:hover {
-    color:#F9B804;
+    color:#F9B804 !important;
     background-color: transparent;
     border:solid;
     border-color:#F9B804;}
@@ -500,7 +500,7 @@
     .btn-primary1:active,   
     .btn-primary1:focus,   
     .btn-primary1:hover {
-    color:#F9B804;
+    color:#F9B804 !important;
     background-color: transparent;
     border:solid;
     border-color:#F9B804;}
