--- a/client/src/components/form.css
+++ b/client/src/components/form.css
@@ -228,9 +228,9 @@ textarea {
   display: inline-block;
 }
 
-.btn1 {
+.btn10 {
   background:inherit;
-  border: solid 2px rgb(100, 57, 0) !important;
+  border: solid 2px rgb(100, 57, 0);
   border-radius:0.25rem;
   color: rgb(100, 57, 0);
   cursor: pointer;
@@ -240,7 +240,7 @@ textarea {
   margin:0%;
   font-weight: bold;
   outline: none;
-  padding: 20px 35px !important;
+  padding: 20px 35px;
   text-transform: uppercase;
   -webkit-transition: all 0.3s;
 	-moz-transition: all 0.3s;
