--- a/client/src/components/banner.css
+++ b/client/src/components/banner.css
@@ -89,3 +89,10 @@
 	cursor: pointer;
   color:white !important;
 }
+
+@media screen and (max-width: 1100px) {
+	.cntr{
+		margin-bottom:8px !important;
+		margin-top:5px !important;
+	}
+}
