--- a/client/src/views/page404.css
+++ b/client/src/views/page404.css
@@ -2,7 +2,7 @@
 #beer_text {
 	font-family: 'roboto';
 	color: white;
-	letter-spacing: 20px;
+	letter-spacing: 15px;
 	font-size: 30px;
 	position: absolute;
 	top: 195px;
@@ -442,7 +442,7 @@
     border: none;
     border-radius: 300px;
     font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
-    color: rgb(100, 57, 0) !important;
+	color: rgb(100, 57, 0) !important;
   }
 
 .btn-xl {
@@ -454,7 +454,8 @@
     background-color: #F9B804;
     border-color: rgb(100, 57, 0);
     border:solid;
-    border-color:transparent;
+	border-color:transparent;
+	transition: 0.25s;
 }
 
   
@@ -479,7 +480,7 @@
 
 
 @media screen and (max-width: 767px) {
-	.col{
+	#colonne{
 		padding-bottom:50px !important;
 	}
     .btn1 {
